# shroud

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  README.MD  docker-compose.yml  multiplex_fix_plan.md
certs/: README.md
configs/: client.yaml  server.yaml
crates/shroud-client/: Cargo.toml
crates/shroud-client/src/: lib.rs  main.rs  routing.rs  session.rs  socks5.rs  tunnel.rs  tunnel_manager.rs
crates/shroud-client/src/tun/: device.rs  dns.rs  engine.rs  mod.rs  route.rs
crates/shroud-client/tests/: mvp_smoke.rs  tun_smoke_linux.rs
crates/shroud-client/tests/fixtures/certs/: ca.crt  localhost.crt  localhost.key
crates/shroud-core/: Cargo.toml
crates/shroud-core/src/: auth.rs  config.rs  lib.rs  protocol.rs
crates/shroud-server/: Cargo.toml
crates/shroud-server/src/: auth.rs  lib.rs  main.rs  relay.rs  web.rs
scripts/: tun-smoke-linux.sh
web/: index.html
