[package]
name = "shroud-client"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
anyhow.workspace = true
base64.workspace = true
bytes.workspace = true
serde.workspace = true
serde_yaml.workspace = true
tokio.workspace = true
tokio-rustls.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
uuid.workspace = true
rustls-pemfile.workspace = true
webpki-roots.workspace = true
shroud-core = { path = "../shroud-core" }
